[package]
name = "user-http"
version = "0.1.0"
edition = "2024"

[dependencies]
# Domain dependencies  
user-commands = { path = "../commands" }
user-events = { path = "../events" }
user-queries = { path = "../queries" }
user-models.workspace = true

# Web framework
axum.workspace = true
axum-core.workspace = true
tower.workspace = true

# Core dependencies
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# Events integration
events-commands.workspace = true
flume.workspace = true

# Analytics integration
analytics.workspace = true

# HTTP
http.workspace = true

user-dao.workspace = true
sql-connection.workspace = true
domain.workspace = true
utoipa.workspace = true
database-traits.workspace = true
async-trait.workspace = true

[dev-dependencies]
test-utils.workspace = true
tokio = { workspace = true, features = ["test-util"] }
anyhow.workspace = true