[package]
name = "user-http"
version = "0.1.0"
edition = "2024"

[dependencies]
# Domain dependencies  
user-commands = { path = "../commands" }
user-handlers = { path = "../handlers" }
user-events = { path = "../events" }
user-queries = { path = "../queries" }
user-responses = { path = "../responses" }
events-queries = { path = "../../events/queries" }
events-handlers = { path = "../../events/handlers" }
events-responses = { path = "../../events/responses" }

# Web framework
axum.workspace = true

# Core dependencies
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true

# Events integration
events-commands.workspace = true
flume.workspace = true

# Analytics integration
analytics.workspace = true

# HTTP
http.workspace = true

sql-connection.workspace = true
domain.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["test-util"] }
test-utils.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true
tower.workspace = true
user-dao.workspace = true
database-traits.workspace = true
serde_json.workspace = true